<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/black">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo"
            android:textSize="20sp"
            style="@style/TableTextStyle"
            android:layout_marginTop="8dp"
            android:gravity="center" />

        <View
            style="@style/TableLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/actor"
            android:textSize="20sp"
            style="@style/TableTextStyle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center" />

        <View
            style="@style/TableLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fecha"
            android:textSize="20sp"
            style="@style/TableTextStyle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center" />

        <View
            style="@style/TableLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ciudad"
            android:textSize="20sp"
            style="@style/TableTextStyle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/TableLine"
        android:layout_marginTop="8dp" />

</TableLayout>
