<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddFilmActivity">

    <EditText
        android:id="@+id/etFilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducir_titulo_pelicula"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busqueda"
        android:layout_below="@id/etFilmTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilmResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btnSearch"
        android:layout_above="@id/button_home"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_home"
        android:drawableLeft="@drawable/ic_home"
        android:drawablePadding="8dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
